--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -13,17 +13,18 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!--<script src="lib/ionic/js/ionic.bundle.js"></script>-->
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-  </head>
+    <script src="lib/requirejs/require.js" data-main="js/app"></script>
+    <script src="js/require.config.js"></script>
 
-  <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
-  </body>
+</head>
+
+<body>
+    <div application></div>
+</body>
 </html>
