--- a/www/js/economy/economy.html
+++ b/www/js/economy/economy.html
@@ -4,7 +4,11 @@
     </ion-nav-buttons>
     <ion-content class="has-header">
 
-        Hello World
+        <h4>{{model.economyData.name}}</h4>
+
+        <p>{{model.economyData.description}}</p>
+
+        <economy-chart chart-data="model.economyData.data"></economy-chart>
 
     </ion-content>
 </ion-view>
