--- a/www/index.html
+++ b/www/index.html
@@ -12,19 +12,13 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-    <!-- ionic/angularjs js -->
-    <!--<script src="lib/ionic/js/ionic.bundle.js"></script>-->
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="lib/requirejs/require.js" data-main="js/app"></script>
-    <script src="js/require.config.js"></script>
-
 </head>
 
 <body>
     <div application></div>
+
+    <script src="cordova.js"></script>
+    <script src="lib/requirejs/require.js" data-main="js/require.config.js"></script>
+
 </body>
 </html>
